@@ -17,8 +17,9 @@ version_rel_day   = 11
 version_rel_hour  = 1
 version_rel_time_zone = Pacific/Auckland
 
-[MetaData::BuiltWith]
-include = MooseX::Types::Moose
+[MetaData::BuiltWith::All]
+show_undef = 1
+;include = MooseX::Types::Moose
 ;include = Acme::BadExample
 ;exclude = Test::More  ; this is in fact, our test!
 
